--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -23,8 +23,8 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
-    </header>
-
+          </header>
+      {% include nav.html %}
     <main id="content" class="main-content" role="main">
       {{ content }}
 
