--- a/docs/_includes/nav.html
+++ b/docs/_includes/nav.html
@@ -1,5 +1,5 @@
-<p style="text-align: center; background-color: white;">
+<h3 style="text-align: center; background-color: white;">
   <a href="{{site.baseurl}}/">Home</a> |
-  <a href="{{site.baseurl}}/downloads/">Downloads</a> | 
+  <a href="{{site.baseurl}}/downloads">Downloads</a> | 
   <a href="{{site.baseurl}}/writing">Writing</a>
-</p>
+</h3>
