--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -29,7 +29,7 @@
       {{ content }}
 
       <footer class="site-footer">
-        <span class="site-footer-owner">&copy <a href="http://www.tanho.ca">Tan Ho </a>(<a href="https://twitter.com/_TanHo">@_TanHo</a>), 2019. All Rights Reserved. </span>
+        <span class="site-footer-owner">&copy <a href="http://www.tanho.ca">Tan Ho</a> (<a href="https://twitter.com/_TanHo">@_TanHo</a>) 2019. </span>
         </footer>
     </main>
   </body>
