--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -63,4 +63,15 @@ $header-bg-color-secondary: #4286f4;
     padding: 0.25rem 1rem;
     font-size: 1rem;
   }
-} 
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    font-weight: bold;
+      }
+      }
