--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+
 <div class="post-categories">
   {% if post %}
     {% assign categories = post.categories %}
@@ -8,9 +9,11 @@ layout: default
     {% assign categories = page.categories %}
   {% endif %}
   {% for category in categories %}
-  <a href="{{site.baseurl}}/writing/#{{category|slugize}}">{{category}}</a>
+  <a href="{{site.baseurl}}/writing/#{{category|slugize}}">Category: {{category}}</a>
   {% unless forloop.last %}&nbsp;{% endunless %}
   {% endfor %}
 </div>
+
+
 
 {{ content }}
