--- a/docs/_includes/nav.html
+++ b/docs/_includes/nav.html
@@ -1,6 +1,6 @@
-<h3 style="text-align: center; background-color: white;">
+<nav style="text-align: center; font-size: 1.1rem; font-weight:bold;"">
   <a href="{{site.baseurl}}/">Home</a> |
-  <a href="{{site.baseurl}}/downloads">Downloads</a> | 
-  <a href="{{site.baseurl}}/writing">Writing</a> | 
-  <a href="{{site.baseurl}}/support">Support Me</a>
-</h3>
+  <a href="{{site.baseurl}}/downloads">Downloads</a> |
+  <a href="{{site.baseurl}}/apps">Apps</a> |
+  <a href="{{site.baseurl}}/writing">Writing</a>
+</nav>
