--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -65,6 +65,10 @@ $header-bg-color-secondary: #4286f4;
   }
 
   h1,
+    {text-align: center;
+      margin-top: 0.5rem;
+      margin-bottom: 0.5rem;
+      font-weight: bold;}
   h2,
   h3,
   h4,
